# recipemd-skills

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
plugins/recipemd/.claude-plugin/: plugin.json
plugins/recipemd/skills/recipemd/: SKILL.md
plugins/recipemd/skills/recipemd-extract/: SKILL.md
plugins/recipemd/skills/recipemd-meal-plan/: SKILL.md
src/: recipemd.py
tests/: test_cli.py  test_extract.py  test_recipemd.py
tests/testdata/golden/: amount_decimal_comma.json  amount_decimal_comma.md  amount_decimal_dot.md  amount_fraction.json  amount_fraction.md  amount_fraction_spaces.md  amount_improper_fraction.json  amount_improper_fraction.md  amount_improper_vulgar.md  amount_integer.json  amount_integer.md  amount_leading_decimal.json  amount_leading_decimal.md  amount_negative.json  amount_negative.md  amount_negative_fraction.json  amount_negative_fraction.md  amount_vulgar.md  amount_with_unit.md  amount_without_unit.json  amount_without_unit.md  amount_zero_denom.json  amount_zero_denom.md  break_many_dashes.md  break_missing.invalid.md  desc_code_block.json  desc_code_block.md  desc_fenced_code_with_dashes.json  desc_fenced_code_with_dashes.md  desc_html.json  desc_html.md  desc_multi.json  desc_multi.md  desc_none.json  desc_none.md  desc_only.json  desc_only.md  desc_single.json  desc_single.md  group_back_to_lower.json  (+63 more)
tests/testdata/golden/frontmatter/: empty_frontmatter.json  empty_frontmatter.md  mixed_fences.invalid.md  toml.md  unclosed.invalid.md  yaml.md
(+10 files in other folders)
