[project]
name = "recipemd"
version = "0.1.0"
description = "Read and write recipes in the RecipeMD format"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Xavier Capaldi" }]
dependencies = [
    "markdown-it-py>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.7",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
